@@ -24,6 +24,9 @@ documents those changes that are of interest to users and admins.
  -- Correct logic for creating a reservation that properly handles the OVERLAP
     and IGNORE_JOBS flags (flags were ignored under some conditions).
  -- Fixed a fair-share calculation bug in the priority/multifactor plugin.
+ -- Make sure a user entry in the database that was previously deleted is
+    restored clean when added back, i.e. remove admin privileges previously
+    given.
 
 * Changes in SLURM 2.1.9
 ========================
